Keep provider advertisements revision-local